<resources>
    <string name="app_name">AlphabetBook</string>
    <string name="a">A</string>
    <string name="c">C</string>
    <string name="_00">00</string>
    <string name="x">X</string>
    <string name="w">W</string>
    <string name="v">V</string>
    <string name="u">U</string>
    <string name="t">T</string>
    <string name="s">S</string>
    <string name="r">R</string>
    <string name="q">Q</string>
    <string name="p">P</string>
    <string name="o">O</string>
    <string name="n">N</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="k">K</string>
    <string name="j">J</string>
    <string name="d">D</string>
    <string name="b">B</string>
    <string name="g">G</string>
    <string name="e">E</string>
    <string name="h">H</string>
    <string name="f">F</string>
    <string name="i">I</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="_0">0</string>
    <string name="a2">A</string>
    <string name="z2">Z</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="image_of_letter">image of letter</string>
</resources>